# jetson-orin-nano

./: .cursorrules  .dockerignore  .editorconfig  .flake8  .gitignore  .hardware_state  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .setup_state  .setup_state.example  BRINGUP.md  BUILD_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_AND_GRAPH_SUMMARY.md  DEVELOPMENT_INSTALL_SUMMARY.md  Dockerfile  Dockerfile.ros2  FINAL_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  QUICK_START_BLUETOOTH.md  QUICK_START_GRAPH_AND_DEPLOY.md  QUICK_START_ROBOT.md  QUICK_START_USBC.md  QUICK_START_WIFI.md  QUICK_TEST.md  README.md  README_BENCH_TEST.md  README_SETUP.md  SETUP_COMPLETE.md  TEST_DEPLOYMENT.md  TEST_HELLO_WORLD.sh  TEST_USBC_SETUP.md  ZSH_CURSOR_SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_hello_world.sh  (+3 more)
.github/workflows/: ci.yml  deploy-dev.yml  release.yml
config/: README.md
config/hardware/: irobot_params.yaml  odrive_params.yaml  phat_params.yaml  realsense_params.yaml  usb_microphone_params.yaml
config/robot/: bench_test_graph.yaml  full_graph.yaml  minimal_graph.yaml  monitor_graph.yaml  robot_graph.yaml
config/system/: packages.yaml  python_packages.yaml
config/systemd/: isaac-cleanup.service  isaac-cleanup.timer  isaac-health-check.service  isaac-health-check.timer  isaac-restore.service  isaac-robot.service  isaac-system-monitor.service  isaac-update.service  isaac-update.timer
config/visualization/: README.md  foxglove_all_camera_data.json  foxglove_all_sensors.json  foxglove_bench_test_layout.json
control/: README.md
docs/: QUICK_START.md  REPOSITORY_STRUCTURE.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md  ROADMAP.md
docs/deployment/: AUTOMATION.md  DEPLOYMENT.md  GITHUB_SETUP.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md
docs/development/: CONFIGURATION_DRIVEN.md  CURSOR_SETUP.md  DEVELOPMENT_ENVIRONMENT.md  PACKAGE_MANAGEMENT.md  SETUP_INTEGRATION.md  WORKFLOW.md
docs/examples/: HELLO_WORLD.md
docs/hardware/: BENCH_SETUP.md  BENCH_TEST_LAUNCH.md  BENCH_TEST_QUICK_START.md  BENCH_TEST_VERIFICATION.md  HARDWARE.md  HARDWARE_SETUP.md  USBC_DISPLAY.md  irobot.md  motor_controllers.md  odrive.md  raspberry_pi_modules.md  realsense.md  sparkfun_auto_phat.md  usb_microphone.md
docs/monitoring/: QUICK_START.md  SYSTEM_MONITOR.md
docs/robot/: GRAPH_CONFIG.md  GRAPH_SELECTION.md
docs/setup/: SETUP.md
docs/system/: BLUETOOTH_SETUP.md  GRAPH_CONFIGURATIONS.md  GRAPH_MANAGEMENT.md  GRAPH_MANAGEMENT_SYSTEMD.md  ISAAC_COMMAND.md  LAUNCHING.md  NODE_LAUNCHING_POLICY.md  NODE_MANAGEMENT.md  NODE_MANAGEMENT_QUICK_REF.md  SYSTEMD_INTEGRATION.md  UNIFIED_MANAGEMENT.md  WIFI_SETUP.md
docs/testing/: QUICK_START.md  TESTING.md
docs/visualization/: AUDIO_AND_3D_NOTES.md  BENCH_TEST.md  CAMERA_TROUBLESHOOTING.md  FOXGLOVE_BRIDGE_TROUBLESHOOTING.md  QUICK_START.md  VISUALIZATION.md  VISUALIZING_TOPICS.md
hardware/motor_controllers/: README.md
hardware/raspberry_pi_modules/: README.md
hardware/realsense/: README.md
logging/: README.md
monitoring/: README.md
monitoring/hardware/: realsense_monitor.sh
scripts/deployment/: deploy.sh  deploy_dev.sh  quick_deploy.sh  rebuild_local.sh
scripts/hardware/: README.md  configure_display.sh  diagnose_phat.sh  diagnose_realsense.sh  install_realsense.sh  setup_hardware.sh  setup_microphone.sh  setup_usbc_display.sh  test_hardware_nodes.sh  verify_all_hardware.sh
scripts/maintenance/: README.md  health_check.sh  self_clean.sh  self_restore.sh  self_update.sh
scripts/monitoring/: README.md  monitor_power.sh  monitor_temperatures.sh  system_health_check.sh
scripts/packaging/: README.md  build_package.sh  install_package.sh
scripts/system/: README.md  check_network.sh  explore_hardware.sh  install_services.sh  isaac  launch_robot.sh  manage_graph.sh  manage_nodes.sh  setup_bluetooth.sh  setup_boot_service.sh  setup_isaac.sh  setup_wifi.sh  start_robot.sh  start_visualization.sh
scripts/testing/: bench_test_cameras.sh  run_tests.sh
scripts/utils/: README.md  env_setup.sh  find_isaac_root.py  get_graph.sh  hardware_manager.py  package_manager.py  select_graph.sh  source_ros2.sh
scripts/visualization/: bench_test_cameras.sh  check_pointcloud_topics.sh  foxglove_import_workaround.md  launch_foxglove_studio.sh  load_camera_layout.sh  setup_foxglove_bridge.sh  setup_rosbridge.sh
src/: README.md
src/hardware_drivers/irobot_serial/: CMakeLists.txt  package.xml  setup.py
src/hardware_drivers/irobot_serial/config/: irobot_params.yaml
src/hardware_drivers/irobot_serial/irobot_serial/: __init__.py  irobot_serial_node.py
src/hardware_drivers/irobot_serial/launch/: irobot_serial.launch.py
src/hardware_drivers/odrive_controller/: CMakeLists.txt  package.xml  (+1 more)
src/hardware_drivers/realsense_camera/: CMakeLists.txt  README.md  package.xml  setup.py
src/hardware_drivers/realsense_camera/config/: foxglove_cameras_layout.json  foxglove_cameras_only_layout.json  foxglove_layout.json
src/hardware_drivers/realsense_camera/launch/: realsense_camera.launch.py
src/hardware_drivers/realsense_camera/realsense_camera/: __init__.py  realsense_camera_node.py
src/hello_world/: CMakeLists.txt  README.md  package.xml  setup.py
src/isaac_robot/: CMakeLists.txt  README.md  package.xml  setup.py
src/isaac_robot/config/robot/: full_graph.yaml  minimal_graph.yaml  robot_graph.yaml
src/isaac_robot/isaac_robot/: __init__.py  config_finder.py  graph_manager.py
src/isaac_robot/launch/: foxglove_bridge.launch.py  full.launch.py  graph.launch.py  minimal.launch.py  robot.launch.py  rosbridge.launch.py  unified_visualization.launch.py
src/system_monitor/: CMakeLists.txt  README.md  __init__.py  package.xml  setup.py
src/system_monitor/config/: monitor_config.yaml
src/system_monitor/launch/: system_monitor.launch.py
src/system_monitor/system_monitor/: __init__.py  system_monitor_node.py
tests/: __init__.py  conftest.py
tests/bench/: __init__.py  test_camera_visualization.py
tests/integration/: __init__.py  test_node_launch.py
tests/unit/: __init__.py  test_graph_manager.py
(+20 files in other folders)
